Added async and await operation. Added etry catch block to PostQuestion. Updated the int to Object. Added new model to get the response from the client. Added test case to verify the quiz.

--- a/BackendCandidateChallenge/QuizService/Properties/launchSettings.json
+++ b/BackendCandidateChallenge/QuizService/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "QuizService": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "api/quizzes",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
